--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport-local": "*",
     "node-arp": "*",
     "connect-flash": "*",
-    "jade": "*"
+    "jade": "*",
+    "socket.io": "*"
   }
 }
